added method to constructor prototype, cleaned up html

--- a/index.html
+++ b/index.html
@@ -2,61 +2,31 @@
 <html lang="en">
   <head>
     <title>Michael Sullivan</title>
-<<<<<<< HEAD
-=======
     <link rel="stylesheet" href="style.css"
->>>>>>> 55540d5a0039b0a378ef3acfa694859356b25bc0
   </head>
   <body>
     <main>
       <header>
-<<<<<<< HEAD
-        <h1>
-          Michael Sullivan
-        </h1>
-        <p>Developer and Still Life Subject</p>
-      </header>
-      <nav>
+        <h1>Michael Sullivan</h1>
+        <nav>
           <ul>
-            <li>Articles</li>
-            <li>About (coming soon!)</li>
-            <li><a href="http://twitter.com/mbscotist" target="_blank">Twitter</a></li>
-            <li><a href="http://github.com/scotist" target="_blank">Github</a></li>
+            <li>Home</li>
+            <li>About</li>
+            <li><a href="http://twitter.com/mbscotist">Twitter</a></li>
+            <li><a href="http://github.com/scotist">Github</a></li>
           </ul>
         </nav>
-        <section id="projects">
-=======
-        <h1>Michael Sullivan</h1>
       </header>
-      <nav>
-        <ul>
-          <li>Articles</li>
-          <li>About</li>
-          <li><a href="http://twitter.com/mbscotist" target="blank">Twitter</a></li>
-          <li><a href="http://github.com/scotist" target="blank">Github</a></li>
-        </ul>
-      </nav>
+
       <section id="projects">
->>>>>>> 55540d5a0039b0a378ef3acfa694859356b25bc0
-          <article class="frame">
-            <header>
-              <h1>Project</h1>
-            </header>
-            <section class="beef"></section>
+          <article class="template">
+              <h1>Projects</h1>
           </article>
         </section>
     </main>
     <footer>
-<<<<<<< HEAD
-      &copy; 2015 Michael Sullivan | All Rights Reserved | Especially the First One
-=======
       © 2015 Michael Sullivan | All Rights Reserved | Especially the First One
->>>>>>> 55540d5a0039b0a378ef3acfa694859356b25bc0
     </footer>
     <script src="jquery-2.1.4.js"></script>
     <script src="portfolio.js"></script>
   </body>
-<<<<<<< HEAD
-</html> 
-=======
->>>>>>> 55540d5a0039b0a378ef3acfa694859356b25bc0
