removed html section, experimented with styling

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <title>Michael Sullivan</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.normalize.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style.base.css">
-    <link rel="stylesheet" href="style.layout.css">
-    <link rel="stylesheet" href="style.modules.css">
+    <link rel="stylesheet" href="style/normalize.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/base.css">
+    <link rel="stylesheet" href="style/layout.css">
+    <link rel="stylesheet" href="style/modules.css">
+    <link rel="stylesheet" href="style/icons.css">
   </head>
   <body>
     <header>
       <h1>Michael Sullivan</h1>
+      <h3>Developer, Sage, Lothario</h3>
     </header class="site-header clearfix">
-      <section class="heading-group-h1">
+      <!-- <section class="heading-group-h1">
         <h1>Michael Sullivan</h1>
         <h2>Developer, Sage, Lothario</h2>
-      </section>
+      </section> -->
       <nav class="main-nav">
         <a class="icon-menu" href="#">&#9776;</a>
         <ul>
