some typo fixes, minor alterations

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           Welcome to my Blog
         </header>
         <section>
-          <h1>Some of my intrests:</h1>
+          <h1>Some of my interests:</h1>
           <ul>
             <li>Coding</li>
             <li>Teaching</li>
@@ -72,6 +72,6 @@
     </footer>
     <script src="jquery-2.1.4.js"></script>
     <script src="projects.js"></script>
-    <script src="portfolioview.js"></script>
     <script src="portfolio.js"></script>
+    <script src="portfolioview.js"></script>
   </body>
