--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
       <nav class="main-nav">
         <a class="icon-menu" href="#">&#9776;</a>
         <ul>
-          <li class="tab" data-content="articles"><a href="#" class="icon-home">Home</a></li>
+          <li class="tab" data-content="articles"><a href="#">Home</a></li>
+          <li class="tab" data-content="about"><a href="#">About</a></li>
           <li><a href="http://twitter.com/mbscotist" target="_blank" class="icon-twitter3"> Twitter</a></li>
           <li><a href="http://github.com/scotist" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
@@ -40,19 +41,10 @@
     </header>
     <main>
       <section id="projects" class="tab-content">
-        <div>
-          <ul id="filters">
-            <li>
-              <select id="category-filter">
-                <option value="">-- Filter by Categories --</option>
-              </select>
-            </li>
-          </ul>
-        </div>
       </section>
       <section id="about" class="tab-content">
         <header>
-          Welcome to my Blog
+          Welcome to my Portfolio. There are many like it but this one is mine.
         </header>
         <section>
           <h1>Some of my interests:</h1>
