fixed broken tag in html, json still not displaying to page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
     <script src="jquery-2.1.4.js"></script>
-    <script src="marked.js"</script>
+    <script src="marked.js"></script>
     <script src="projects.json"></script>
     <script src="portfolio.js"></script>
     <script src="portfolioview.js"></script>
