wrapped script files in IFFEs

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li>Coding</li>
             <li>Teaching</li>
             <li>Synergizing</li>
+            <li>Crushing It</li>
           </ul>
         </section>
       </section>
