successfully refactored portfolio as a spa using page.js, having problems with tabs and projects display,

--- a/index.html
+++ b/index.html
@@ -61,13 +61,18 @@
         <li><a href="http://github.com/scotist" target="_blank" class="icon-github"> GitHub</a></li>
       </ul>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-    <script src="jquery-2.1.4.js"></script>
-    <script src="scripts/marked.js"</script>
-    <script src="projects.json"></script>
-    <script src="scripts/portfolio.js"></script>
-    <script src="scripts/portfolioview.js"></script>
-    <script>
-      Project.fetchAll();
-    </script>
+    <script src="/scripts/jquery-2.1.4.js"></script>
+    <script src="/scripts/handlebars.js"></script>
+    <script src="scripts/marked.js"></script>
+    <script src="/scripts/html5sql.js"></script>
+    <script src="/scripts/highlight.pack.js"></script>
+    <script src="/scripts/webdb.js"></script>
+    <script src="/scripts/page.js"></script>
+    <script src="/scripts/portfolio.js"></script>
+    <script src="/scripts/portfolioview.js"></script>
+    <script src="/scripts/projectsController.js"></script>
+    <script src="/scripts/aboutController.js"></script>
+    <script src="/scripts/routes.js"></script>
+
   </body>
+</html>
