--- a/index.html
+++ b/index.html
@@ -2,77 +2,100 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Michael Sullivan</title>
+    <title>Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="style/base.css">
-    <link rel="stylesheet" href="style/layout.css">
-    <link rel="stylesheet" href="style/modules.css">
-    <link rel="stylesheet" href="style/icons.css">
-    <script id="project-template" type="text/x-handlebars-template">
-      <article  data-category="{{category}}">
+    <link rel="stylesheet" href="vendor/styles/normalize.css">
+    <link rel="stylesheet" href="styles/icons.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/layout.css">
+    <link rel="stylesheet" href="styles/modules.css">
+
+    <script id="article-template" type="text/x-handlebars-template">
+      <article class="clearfix" data-author="{{author}}" data-category="{{category}}">
         <header>
           <h1>{{title}}</h1>
-          <div class="byline">
-            By <address><a href="{{url}}">See it here!</a></address>
+          <!-- <div class="byline">
+            By <address><a href="{{authorUrl}}">{{author}}</a></address>
+            {{publishStatus}} -->
           </div>
         </header>
-        <section class="project-body">{{description}}</section>
-        <!-- <a href="#" class="read-on">Read on &rarr;</a> -->
+        <section class="article-body">{{{description}}}</section>
+        <a href="#" class="read-on">Read on &rarr;</a>
       </article>
     </script>
   </head>
   <body>
-    <header>
-      <h1>Michael Sullivan</h1>
-      <h3>Developer, Sage, Lothario</h3>
-    </header class="site-header clearfix">
+    <header class="site-header clearfix">
+      <section class="heading-group-h1">
+        <h1>
+          Michael Sullivan
+        </h1>
+        <h3>Developer, Sage, Vagrant</h2>
+      </section>
       <nav class="main-nav">
-        <a class="icon-menu" href="#">&#9776;</a>
+        <div class="icon-menu"></div>
         <ul>
-          <li class="tab" data-content="projects"><a href="#">Home</a></li>
-          <li class="tab" data-content="about"><a href="#">About</a></li>
+          <li class="tab" data-content="articles"><a href="/" class="icon-home"> Home</a></li>
+          <li class="tab" data-content="about"><a href="/about" class="icon-address-book"> About</a></li>
+          <li><a href="http://twitter.com/mbscotist" target="_blank" class="icon-twitter3"> Twitter</a></li>
+          <li><a href="http://github.com/scotist" target="_blank" class="icon-github"> GitHub</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <section id="projects" class="tab-content">
+      <section id="articles" class="tab-content">
+        <!-- <div>
+          <ul id="filters">
+            <li>
+              <select id="author-filter">
+                <option value="">-- Filter by Authors --</option>
+              </select>
+            </li>
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select>
+            </li>
+          </ul>
+        </div> -->
       </section>
       <section id="about" class="tab-content">
         <header>
-          Welcome to my Portfolio. There are many like it but this one is mine.
+          Welcome to my Portfolio
         </header>
         <section>
-          <h1>Some of my interests:</h1>
+          <h1>Check out my Most Popular Projects on GitHub:</h1>
           <ul>
+            <li>Coding</li>
+          </ul>
+        </section>
+        <section>
+          <h1>Some of my interests:</h1>
+          <ol>
             <li>Coding</li>
             <li>Teaching</li>
             <li>Synergizing</li>
             <li>Crushing It</li>
-          </ul>
+          </ol>
         </section>
       </section>
     </main>
     <footer>
-      © 2015 Michael Sullivan | All Rights Reserved | Especially the First One
-      <ul>
-        <li><a href="http://twitter.com/mbscotist" target="_blank" class="icon-twitter3"> Twitter</a></li>
-        <li><a href="http://github.com/scotist" target="_blank" class="icon-github"> GitHub</a></li>
-      </ul>
+      &copy; 2015  Michael Sullivan | All Rights Reserved | Especially the First One
     </footer>
-    <script src="/scripts/jquery-2.1.4.js"></script>
-    <script src="/scripts/handlebars.js"></script>
-    <script src="scripts/marked.js"></script>
-    <script src="/scripts/html5sql.js"></script>
-    <script src="/scripts/highlight.pack.js"></script>
+    <script src="/vendor/scripts/jquery-2.1.4.js"></script>
+    <script src="/vendor/scripts/handlebars.js"></script>
+    <script src="/vendor/scripts/marked.js"></script>
+    <script src="/vendor/scripts/html5sql.js"></script>
     <script src="/scripts/webdb.js"></script>
-    <script src="/scripts/page.js"></script>
-    <script src="/scripts/portfolio.js"></script>
-    <script src="/scripts/portfolioview.js"></script>
-    <script src="/scripts/projectsController.js"></script>
+    <script src="/vendor/scripts/page.js"></script>
+    <script src="/scripts/githubToken.js"></script>
+    <script src="/scripts/article.js"></script>
+    <script src="/scripts/articleView.js"></script>
+    <script src="/scripts/articleController.js"></script>
+    <script src="/scripts/repo.js"></script>
+    <script src="/scripts/repoView.js"></script>
     <script src="/scripts/aboutController.js"></script>
     <script src="/scripts/routes.js"></script>
-
   </body>
 </html>
