--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <script src="/vendor/scripts/html5sql.js"></script>
     <script src="/scripts/webdb.js"></script>
     <script src="/vendor/scripts/page.js"></script>
-    <script src="/scripts/githubToken.js"></script>
+    <!-- <script src="/scripts/githubToken.js"></script> -->
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script src="/scripts/articleController.js"></script>
